--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha --recursive --require babel-core/register --reporter dot test/config/setup.js test/* || true",
+    "watch": "./node_modules/mocha/bin/mocha --recursive --watch  --require babel-core/register --reporter dot test/config/setup.js test/* || true",
     "start": "node server.js"
   },
   "author": "",
@@ -14,8 +15,10 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
     "express": "^4.13.4",
     "http-proxy-middleware": "^0.11.0",
+    "mocha": "^2.4.5",
     "path": "^0.12.7",
     "url": "^0.11.0",
     "webpack": "^1.12.14",
@@ -23,7 +26,10 @@
     "webpack-hot-middleware": "^2.8.1"
   },
   "dependencies": {
+    "deep-freeze": "0.0.1",
+    "lodash": "^4.6.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "redux": "^3.3.1"
   }
 }
