--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,10 @@
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "lodash": "^4.5.1"
+  },
+  "devDependencies": {
+    "body-parser": "^1.15.0"
   }
 }
