--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "http-proxy-middleware": "^0.11.0",
     "mocha": "^2.4.5",
     "path": "^0.12.7",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "url": "^0.11.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
