--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
     "redux": "^3.3.1"
   }
 }
