--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "webpack-hot-middleware": "^2.8.1"
   },
   "dependencies": {
+    "axios": "^0.9.1",
     "deep-freeze": "0.0.1",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
