--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,25 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --recursive --require babel-core/register --reporter dot test/config/setup.js test/* || true",
     "watch": "./node_modules/mocha/bin/mocha --recursive --watch  --require babel-core/register --reporter dot test/config/setup.js test/* || true",
+    "lint": "eslint src test server.js || true",
+    "watch:lint": "esw -w src test server.js",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.6.0",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "eslint-watch": "^2.1.10",
+    "estraverse": "^4.1.1",
+    "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "http-proxy-middleware": "^0.11.0",
     "mocha": "^2.4.5",
