--- a/client/package.json
+++ b/client/package.json
@@ -39,12 +39,14 @@
   "dependencies": {
     "axios": "^0.9.1",
     "deep-freeze": "0.0.1",
+    "json-loader": "^0.5.4",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
     "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "websocket": "^1.0.22"
   }
 }
