--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
+    "bluebird": "^3.3.4",
     "express": "^4.13.4",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "websocket": "^1.0.22"
   },
   "devDependencies": {
     "body-parser": "^1.15.0"
