--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "babel-core": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "express": "^4.13.4",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "nodemon": "^1.9.1"
   },
   "devDependencies": {
     "body-parser": "^1.15.0"
