--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "estraverse": "4.2.0",
     "estraverse-fb": "1.3.1",
     "http-proxy-middleware": "0.12.0",
+    "json-loader": "0.5.4",
     "mocha": "2.4.5",
     "path": "0.12.7",
     "sinon": "1.17.3",
