--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "6.2.4",
     "babel-preset-react-hmre": "1.1.1",
     "chai": "3.5.0",
+    "css-loader": "0.23.1",
     "eslint": "2.4.0",
     "eslint-config-airbnb": "6.1.0",
     "eslint-plugin-react": "4.2.1",
@@ -31,6 +32,9 @@
     "path": "0.12.7",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
+    "style-loader": "0.13.0",
+    "stylus": "0.54.2",
+    "stylus-loader": "1.5.1",
     "url": "0.11.0",
     "webpack": "1.12.14",
     "webpack-dev-middleware": "1.5.1",
