--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --recursive --require babel-core/register --reporter dot test/config/setup.js test/* || true",
     "watch": "./node_modules/mocha/bin/mocha --recursive --watch  --require babel-core/register --reporter dot test/config/setup.js test/* || true",
-    "lint": "eslint src test server.js || true",
-    "watch:lint": "esw -w src test server.js",
+    "lint": "eslint client server config.js server.js || true",
+    "watch:lint": "esw -w client server config.js server.js",
     "start": "nodemon server.js"
   },
   "author": "",
