--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "express": "4.13.4",
     "lodash": "4.6.1",
     "nodemon": "1.9.1",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
+    "react": "15.0.0-rc.1",
+    "react-dom": "15.0.0-rc.1",
     "react-redux": "4.4.1",
     "react-router": "2.0.1",
     "redux": "3.3.1",
