--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "./node_modules/mocha/bin/mocha --recursive --watch  --require babel-core/register --reporter dot test/config/setup.js test/* || true",
     "lint": "eslint client server config.js server.js || true",
     "watch:lint": "esw -w client server config.js server.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js --exec babel-node --presets es2015"
   },
   "author": "",
   "license": "MIT",
