--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "15.0.0-rc.1",
     "react-redux": "4.4.1",
     "react-router": "2.0.1",
+    "react-router-redux": "4.0.0",
     "redux": "3.3.1",
     "redux-thunk": "2.0.1",
     "websocket": "^1.0.22"
