--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "2.0.1",
     "react-router-redux": "4.0.0",
     "redux": "3.3.1",
+    "redux-logger": "2.6.1",
     "redux-thunk": "2.0.1",
     "websocket": "^1.0.22"
   }
